--- a/style.css
+++ b/style.css
@@ -125,3 +125,55 @@ header {
     color: var(--primary-purple);
     cursor: pointer;
 }
+
+#main-notes-container {
+    padding: 20px;
+}
+
+#filters-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#filters-bar button {
+    width: 70px;
+    margin: 5px;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.filter-active {
+    background-color: var(--primary-purple);
+    color: var(--text-color);
+    transition: background 0.3s ease-in-out;
+}
+
+.filter-active:hover {
+    background-color: var(--hover-purple);
+}
+
+#notes-container {
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: auto;
+    max-height: 700px;
+}
+
+.note-card-date {
+    color: var(--grey);
+    font-size: 13px;
+}
+
+.note-card {
+    width: 180px;
+    height: 180px;
+    background-color: var(--text-color);
+    border: 0.5px solid var(--lightgrey);
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+}
